--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 <div class="container-fluid text-center">
     <h1>Welcome to my application</h1>
     <a class="h2" th:href="@{/users}">Manage</a>
+    <h2>git bhai</h2>
 </div>
 </body>
 </html>
